rusty-cdk-macros/tests/fails/zero_for_create_non_zero_number.stderr
error: value should not be null
 --> tests/fails/zero_for_create_non_zero_number.rs:4:32
  |
4 |     let key = non_zero_number!(0);
  |                                ^
